--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,12 +10,23 @@ p {
   margin: 0;
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: #ff7272;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+  background-color: #000;
+  width: 5px;
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../img/darkbg.jpg");
   background-size: cover;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 .header {
@@ -178,7 +189,6 @@ body {
 .section {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url("../img/sectionbg.jpg");
-  background-attachment: fixed;
   background-position: center;
   background-size: cover;
   &-text {
@@ -279,4 +289,106 @@ body {
   font-size: 1rem;
   padding: 0.7rem 1rem;
   border-radius: 0.3rem;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    .logo {
+      img {
+        width: 80%;
+      }
+    }
+    .navBar {
+      position: relative;
+      .nav {
+        border-radius: 1rem;
+        display: flex;
+        width: 100%;
+        position: absolute;
+        background-color: #fff;
+        flex-direction: column;
+        top: 200%;
+        transition: 0.3s ease;
+        &-link {
+          text-align: center;
+          margin-top: 2rem;
+        }
+        &-link:last-child {
+          margin-bottom: 2rem;
+        }
+      }
+    }
+    &-big-text {
+      font-size: 3.4rem;
+    }
+  }
+  .top-address {
+    width: 90%;
+    padding: 2rem 1rem;
+    border-radius: 0.6rem;
+    img {
+      width: 100%;
+      filter: invert(100%);
+    }
+    p {
+      color: #ff7272;
+    }
+  }
+  .content {
+    &-text {
+      margin-top: 1.5rem;
+    }
+    &-title {
+      font-size: 2.5rem;
+    }
+  }
+  .section {
+    text-align: center;
+    &-text {
+      text-shadow: 0 0 5px #000;
+    }
+    &-title {
+      font-size: 2.7rem;
+    }
+    &-content {
+      border-radius: 0.5rem;
+      p {
+        font-size: 1rem;
+      }
+    }
+    &-img {
+      width: 60px;
+      margin-bottom: 1.2rem;
+    }
+  }
+  .about {
+    &-img {
+      margin-top: 1rem;
+      border-radius: 0.5rem;
+      filter: drop-shadow(0px 0px 0px #fff);
+    }
+    &-text {
+      line-height: 2rem;
+    }
+  }
+  .footer {
+    &-contact {
+      border-radius: 0.5rem;
+    }
+  }
+  .scroll-up {
+    right: 50%;
+    transform: translateX(50%);
+  }
+  .row {
+    --bs-gutter-x: 0;
+  }
+}
+
+.show-nav {
+  left: 0;
+}
+
+.hide-nav {
+  left: 150%;
 }
